CEA-9: Add exchange rates endpoint, tests, exception, service